I started working on the header, i added the icons for navigation and the search button as well.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <div class="left-header">
             <img src="images/icons/hamburger-menu.svg" alt="">
-            <img src="images/icons/youtube-logo.svg" alt="">  
+            <img class="youtube-logo" src="images/icons/youtube-logo.svg" alt="">  
         </div>
         
         <div class="middle-header">
@@ -30,7 +30,7 @@
             <img src="images/icons/upload.svg" alt="">
             <img src="images/icons/youtube-apps.svg" alt="">
             <img src="images/icons/notifications.svg" alt="">
-            <img src="images/profile-photos/my-channel.jpeg" alt="">
+            <img class="channel-picture" src="images/profile-photos/my-channel.jpeg" alt="">
         </div>
     </header>
 
