I added buttons to the search and voice search icons at the header

--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
         </div>
         
         <div class="middle-header">
-            <input type="text" placeholder="Search">
-            <img src="images/icons/search.svg" alt="">
-            <img src="images/icons/voice-search-icon.svg" alt="">
+            <input class="search-bar" type="text" placeholder="Search">
+            <button class="search-button">
+                <img src="images/icons/search.svg" alt="">
+            </button>
+            <button class="voice-search-button">
+                <img src="images/icons/voice-search-icon.svg" alt="">
+            </button>
         </div>
             
         <div class="right-header">
